--- a/public/vinayak.html
+++ b/public/vinayak.html
@@ -2034,9 +2034,9 @@ function loginNetlifyIdentity(user) {
 
   getFaunaID( qc );
 
-  var samm = { title : user_id ,  key_value: user_id };
+  //var samm = { title : user_id ,  key_value: user_id };
 
-  createFaunaID(samm); 
+  //createFaunaID(samm); 
 
 }
 
