--- a/public/vinayak.html
+++ b/public/vinayak.html
@@ -2030,9 +2030,9 @@ function loginNetlifyIdentity(user) {
 
   console.log( "user_id: user_email", user_id , user_email );
 
-  //var qc = {"query" : user_id};
+  var qc = {"query" : user_id};
 
-  //getFaunaID( qc );
+  getFaunaID( qc );
 
   var samm = { title : user_id ,  key_value: user_id };
 
