--- a/public/vinayak.html
+++ b/public/vinayak.html
@@ -2036,6 +2036,10 @@ function loginNetlifyIdentity(user) {
 
   getFaunaID( qc );
 
+  var er = {"query" : " Nothing Here " };
+
+  getFaunaID( er );
+
   var samm = { title : user_id ,  key_value: user_id };
 
   createFaunaID(samm);
