--- a/public/vinayak.html
+++ b/public/vinayak.html
@@ -2141,7 +2141,7 @@ function getFaunaID ( user_id ) {
           has_account = true;
           user_stripe_id = key;
           
-          retrieveCustomer(user_stripe_id);
+          retrieveCustomer("cus_Ho7ONViaXcFXOy"); #(user_stripe_id);
         }
         else
         {
