--- a/public/vinayak.html
+++ b/public/vinayak.html
@@ -2189,6 +2189,7 @@ function getFaunaID ( user_id ) {
           {
             createCustomer = true;
             vGuestLogin();
+            console.log("createCustomer = true");
           }
 
         }
@@ -2196,6 +2197,7 @@ function getFaunaID ( user_id ) {
         {
             createCustomer = true;
             vGuestLogin();
+            console.log("createCustomer = true");
         }
     
     }).catch((error) => {
@@ -2522,7 +2524,6 @@ catch(err) {
 
 
 </body>
-
 
 
 </html>
