--- a/public/vinayak.html
+++ b/public/vinayak.html
@@ -1643,8 +1643,8 @@ function checkRelevance(){
     $(".signin-holder").show();
     $('.vPrevious').show();
 
-    if(userloggedin){
-      vGuestLogin();
+    if(userloggedin && statusNetlify){
+      vNextState();
     }
 
 
@@ -2194,7 +2194,7 @@ function getFaunaID ( user_id ) {
           else
           {
             createCustomer = true;
-            vNextState();
+            checkRelevance();
             console.log("createCustomer = true");
           }
 
@@ -2202,7 +2202,7 @@ function getFaunaID ( user_id ) {
         else
         {
             createCustomer = true;
-            vNextState();
+            checkRelevance();
             console.log("createCustomer = true");
         }
     
