--- a/public/vinayak.html
+++ b/public/vinayak.html
@@ -1637,11 +1637,14 @@ function checkRelevance(){
   }
 
   if (state === 1){
+
     /// Login FORM ///
 
     hideAllForms();
     $(".signin-holder").show();
     $('.vPrevious').show();
+
+    statusNetlify = $('#cart').is(':visible');
 
     console.log( "userloggedin : statusNetlify", userloggedin, statusNetlify );
 
