--- a/public/index.html
+++ b/public/index.html
@@ -2339,10 +2339,8 @@ function netlifyIdentityWidgetclosed() {
     statusNetlify = false;
 
     if (state === 1){
-      state += 1;
+      vNextState();
     }
-
-    checkRelevance();
 
   }
 
