--- a/public/index.html
+++ b/public/index.html
@@ -1689,11 +1689,12 @@ function checkRelevance(){
 
     console.log( "userloggedin : statusN", userloggedin, statusN );
 
+/*
     if(user_id.length > 1 && statusN)
     {
       vNextState();
     }
-
+*/
 
   }
 
@@ -2429,9 +2430,9 @@ function netlifyIdentityWidgetclosed() {
 
     statusNetlify = false;
 
-    if (state === 1){
-      vNextState();
-    }
+    //if (state === 1){
+      //vNextState();
+    //}
 
   }
 
