--- a/public/index.html
+++ b/public/index.html
@@ -1689,12 +1689,13 @@ function checkRelevance(){
 
     console.log( "userloggedin : statusN", userloggedin, statusN );
 
-/*
-    if(user_id.length > 1 && statusN)
+
+    if(user_id.length > 1)
     {
-      vNextState();
+      //vNextState();
+      $('.next-address').show();
     }
-*/
+
 
   }
 
