--- a/public/index.html
+++ b/public/index.html
@@ -1600,8 +1600,10 @@ function save_address(){
 
 function stripeAddress( customer )
 {
-  var addr = get_address();
+  
+  var addr = [];
 
+  //var addr = get_address();
   //var key = {};
   //key["shipcountry"] = cs.value;
   //address.push(key);
